cambios de estilos semejanza al figma

--- a/negocio.html
+++ b/negocio.html
@@ -69,10 +69,10 @@
       <div class="container-fluid">
         <div class="row">
           <div class="col-md-12">
-            <h1 class="ms-4 mt-3" style="color: #1a4301"style="font-size: 90px" ;>
+            <h1 class="ms-4 mt-3" style="color: #1a4301"style="font-size: 95px" ;>
               Convierte los alimentos no vendidos en ingresos
             </h1>
-            <p class="text-black fs-3 ms-4">
+            <p class="text-black fs-3 ms-4 mb-5 mt-5">
               Contanos sobre su negocio para comenzar:
             </p>
           </div>
@@ -136,13 +136,13 @@
             </div>
             <button
               type="button"
-              class="rounded-pill btn fs-3 fw-bold ms-4 mt-4 text-white mb-4"
+              class="rounded-pill btn  fw-bold ms-4 mt-4 text-white mb-4"
               style="border-color: #1a4301; background-color: #1a4301"
               ;
               ;
               onclick="negocio()"
             >
-              REGISTRATE AHORA
+              <p class="fs-4 pe-3 ps-3">REGISTRATE AHORA</p>
             </button>
           </div>
         </div>
@@ -180,11 +180,41 @@
               aplicación.
             </p>
           </div>
+          <div class="col-md-6 px-5 pt-3">
+            <a
+            type="button"
+            class="button rounded-pill fs-3 text-white fw-bold ms-4"
+            style="
+              text-decoration: none;
+              border-color: #1a4301;
+              background-color: #1a4301;
+              height: 85px;
+              justify-content: center;
+            "
+            href="./instructivo/InstructivoShareBeforeWaste.png" alt="_blank"
+            download
+            >
+            <p class="mt-3 fs3 me-2 ms-2">
+              INSTRUCTIVO
+              <svg
+                xmlns="http://www.w3.org/2000/svg"
+                width="22"
+                height="16"
+                viewBox="0 0 22 16"
+                fill="none"
+              ><path
+                  d="M18.48 6.98942C18.6209 6.62161 18.7 6.21942 18.7 5.80005C18.7 3.97817 17.2219 2.50005 15.4 2.50005C14.7228 2.50005 14.0903 2.7063 13.5678 3.05692C12.6156 1.40692 10.8384 0.300049 8.8 0.300049C5.76125 0.300049 3.3 2.7613 3.3 5.80005C3.3 5.89286 3.30344 5.98567 3.30687 6.07849C1.38187 6.75567 0 8.5913 0 10.75C0 13.4829 2.21719 15.7 4.95 15.7H17.6C20.0303 15.7 22 13.7304 22 11.3C22 9.17224 20.4875 7.39505 18.48 6.98942ZM13.9116 10.0385L10.2884 13.6616C10.0753 13.8747 9.72469 13.8747 9.51156 13.6616L5.88844 10.0385C5.54125 9.6913 5.78875 9.10005 6.27688 9.10005H8.525V5.25005C8.525 4.94755 8.7725 4.70005 9.075 4.70005H10.725C11.0275 4.70005 11.275 4.94755 11.275 5.25005V9.10005H13.5231C14.0113 9.10005 14.2588 9.6913 13.9116 10.0385Z"
+                  fill="white"
+                />
+              </svg>
+            </p>
+          </a>
         </div>
       </div>
+    </div>
       <div class="container-fluid">
         <div class="row">
-          <h2 class="fw-bold text-center fs-1 mt-5" style="color: #1a4301" ;>
+          <h2 class=" text-center fs-1 mt-5" style="color: #1a4301" ;>
             Empresas que trabajan con nosotros
           </h2>
         </div>
