--- a/tuopinion.html
+++ b/tuopinion.html
@@ -161,9 +161,9 @@
                 </p>
               </div>
               <div class="col-md-4 ms-4">
-                <div class="form-floating mb-3" style="color: white">
+                <div class="form-floating mb-3 me-0 ms-0" style="color: white">
                   <input
-                    type="email"
+                    type="text"
                     class="form-control border border-success rounded-pill"
                     id="floatingInput"
                     placeholder="Nombre y apellido "
@@ -171,7 +171,7 @@
                   <label for="floatingInput">Nombre y apellido</label>
                 </div>
                 <div>
-                  <div class="form-floating mb-3" style="color: white">
+                  <div class="form-floating mb-3 me-0 ms-0" style="color: white">
                     <input
                       type="email"
                       class="form-control border border-success rounded-pill"
