--- a/index.html
+++ b/index.html
@@ -95,7 +95,7 @@
       <div class="container-fluid text-left fondo px-0">
         <div class="row">
           <div class="col-md-6">
-            <h1 class="pt-4 ms-4" style="color: #1a4301">Sobre nosotros</h1>
+            <h1 class="pt-4 mt-4 ms-4" style="color: #1a4301">Sobre nosotros</h1>
             <p class="text-dark fs-3 ms-4">
               Somos una empresa B que busca terminar con el desperdicio de
               comida y darle una alternativa a aquellos que lo necesitan.
@@ -245,7 +245,7 @@
               "
               href="./archivos/appShareBeforeWaste.zip"
               download
-              ><p class="mt-3 fs3 me-2 ms-2"> DESCARGA LA APLICACIÓN </p>
+              ><p class="mt-3 fs3 me-4 ms-4"> DESCARGA LA APLICACIÓN </p>
             </a>
           </div>
         </div>
