--- a/usuario.html
+++ b/usuario.html
@@ -111,7 +111,7 @@
               "
               href="./archivos/appShareBeforeWaste.zip"
               download
-              ><p class="mt-3 fs3 me-2 ms-2">DESCARGA LA APLICACIÓN</p>
+              ><p class="mt-3 fs3 me-2 ms-2">REGISTRATE AHORA</p>
             </a>
             <a
               type="button"
