--- a/negocio.html
+++ b/negocio.html
@@ -98,7 +98,7 @@
           <input
             type="text"
             class="form-control border border-success rounded-pill"
-            id="numero de teléfono"
+            id="numerodetelefono"
             placeholder="Numero de teléfono"
           />
           <label for="Nameinput">Numero de teléfono</label>
@@ -112,7 +112,7 @@
                 type="email"
                 class="form-control border border-success rounded-pill"
                 style="border-color: #1a4301"
-                id="correoelectrónico"
+                id="correoelectronico"
                 placeholder="Dirección de correo electrónico"
               />
               <label for="floatingInput">Dirección de correo electrónico</label>
