--- a/usuario.html
+++ b/usuario.html
@@ -97,7 +97,7 @@
       </div>
       <div>
         <div class="row">
-          <div class="col-md-12">
+          <div class="col-md-6">
             <a
             onclick="newsletter()"
               type="button"
@@ -111,7 +111,7 @@
               "
               href="./archivos/appShareBeforeWaste.zip"
               download
-              ><p class="mt-3 fs3 me-2 ms-2">REGISTRATE AHORA</p>
+              ><p class="mt-3 fs3 me-2 ms-2">DESCARGA LA APLICACIÓN</p>
             </a>
             <a
               type="button"
