agregie imagen para versión responsive

--- a/negocio.html
+++ b/negocio.html
@@ -127,7 +127,7 @@
               <input
                 type="email"
                 class="form-control border border-success rounded-pill"
-                style="border-color: #1a4301"
+                style="border-color: #1a4301;"
                 ;;
                 id="ciudad"
                 placeholder="Ciudad"
@@ -137,7 +137,7 @@
             <button
               type="button"
               class="rounded-pill btn  fw-bold ms-4 mt-4 text-white mb-4"
-              style="border-color: #1a4301; background-color: #1a4301"
+              style="border-color: #1a4301; background-color: #1a4301;"
               ;
               ;
               onclick="negocio()"
@@ -172,18 +172,19 @@
       </div>
       <div class="container-fluid text-start px-0">
         <div class="row">
-          <div class="col-md-6 px-5 pt-3">
+          <div class="col-md-6 px-5 mt-5 pt-3">
             <h2 style="font-size: 45px" class="mb-4">Cómo funciona</h2>
-            <p class="text-black fs-3 fw-bold">
+            <p class="text-black fs-3 fw-bold mt-5">
               Complete el formulario de consulta para registrar su negocio en
               Share before waste y agregue sus excedentes de comida en la
               aplicación.
             </p>
           </div>
-          <div class="col-md-6 px-5 pt-3">
+          <div class="row">
+          <div class="col-md-6 px-5 pt-3 ">
             <a
             type="button"
-            class="button rounded-pill fs-3 text-white fw-bold ms-4"
+            class="button rounded-pill fs-3 text-white fw-bold ms-2"
             style="
               text-decoration: none;
               border-color: #1a4301;
@@ -211,6 +212,7 @@
           </a>
         </div>
       </div>
+    </div>
     </div>
       <div class="container-fluid">
         <div class="row">
