--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
     />
   </head>
   <body>
-    <nav class="navbar navbar-expand-md navbar-light bg-light  py-3 py-lg-1">
+    <nav class="navbar navbar-expand-md navbar-light bg-light py-3 py-lg-1">
       <div class="container">
         <a class="navbar-brand" href="/index.html">
           <img
@@ -42,47 +42,44 @@
           style="justify-content: end"
           id="navbarNav"
         >
-        <ul class="navbar-nav">
-          <li class="nav-item px-4">
-            <a class="nav-link fw-bold" href="index.html">INICIO</a>
-          </li>
-          <li class="nav-item  px-4">
-            <a class="nav-link fw-bold" href="iniciativas.html"
-              >INICIATIVAS</a
-            >
-          </li>
-          <li class="nav-item  px-4">
-            <a class="nav-link fw-bold" href="negocio.html">NEGOCIO</a>
-          </li>
-          <li class="nav-item  px-4">
-            <a class="nav-link fw-bold" href="usuario.html">USUARIO</a>
-          </li>
-          <li class="nav-item  px-4">
-            <a class="nav-link fw-bold" href="tuopinion.html">TU OPINIÓN</a>
-          </li>
-        </ul>
+          <ul class="navbar-nav">
+            <li class="nav-item px-4">
+              <a class="nav-link fw-bold" href="index.html">INICIO</a>
+            </li>
+            <li class="nav-item px-4">
+              <a class="nav-link fw-bold" href="iniciativas.html"
+                >INICIATIVAS</a
+              >
+            </li>
+            <li class="nav-item px-4">
+              <a class="nav-link fw-bold" href="negocio.html">NEGOCIO</a>
+            </li>
+            <li class="nav-item px-4">
+              <a class="nav-link fw-bold" href="usuario.html">USUARIO</a>
+            </li>
+            <li class="nav-item px-4">
+              <a class="nav-link fw-bold" href="tuopinion.html">TU OPINIÓN</a>
+            </li>
+          </ul>
         </div>
       </div>
     </nav>
     <main>
-      <div class="container-fluid text-start px-0">
+      <div class="container-fluid text-start px-0 hide-on-700px">
         <div class="row">
           <div class="col-md-12" style="position: relative">
             <img class="img-fluid" src="./imagenes/fondoinicio.jpg" />
             <div class="col-md-8" style="position: absolute; top: 10px">
-              <h1
-                class="text-white ms-5 mt-5 versionpequena mt-5"
-                style="font-size: 90px"
-              >
+              <h1 class="text-white ms-5 mt-5 mt-5" style="font-size: 90px">
                 Salvemos juntos la buena comida
               </h1>
               <div class="row">
                 <div class="col-md-8">
-                  <p class="text-white fs-2 ms-5 versionpequena mt-5">
+                  <p class="text-white fs-2 ms-5 mt-5">
                     El desperdicio de alimentos es un gran problema y nosotros
                     podemos ser una solución.
                   </p>
-                  <p class="text-white ms-5 versionpequena mt-5 fs-2">
+                  <p class="text-white ms-5 mt-5 fs-2">
                     Share Before Waste es la aplicación que te permite rescatar
                     los alimentos no vendidos en tus lugares favoritos.
                   </p>
@@ -92,10 +89,23 @@
           </div>
         </div>
       </div>
-      <div class="container-fluid text-left fondo px-0">
+      <div class="container-fluid text-start px-0 hide-on-701px">
+        <div class="row">
+          <div class="col-md-12 hide-on-701px" style="position: relative">
+            <img
+              class="img-fluid hide-on-701px"
+              src="./imagenes/fondoinicio.png"
+            />
+            <div
+              class="container-fluid text-left fondo px-0 hide-on-701px"
+            ></div>
+          </div>
+        </div>
         <div class="row">
           <div class="col-md-6">
-            <h1 class="pt-4 mt-4 ms-4" style="color: #1a4301">Sobre nosotros</h1>
+            <h1 class="pt-4 mt-4 ms-4" style="color: #1a4301">
+              Sobre nosotros
+            </h1>
             <p class="text-dark fs-3 ms-4">
               Somos una empresa B que busca terminar con el desperdicio de
               comida y darle una alternativa a aquellos que lo necesitan.
@@ -173,8 +183,32 @@
           </div>
         </div>
       </div>
+      <div class="container-fluid text-start px-0 hide-on-1493px">
+        <div class="row">
+          <div class="col-md-12 hide-on-1493px" style="position: relative">
+            <img class="img-fluid mb-5 hide-on-700px" src="./imagenes/untercio.png" />
+            <div
+              class="col-md-6 hide-on-1493px"
+              style="position: absolute; top: 10px; text-align: left"
+            >
+              <h1
+                class="text-white ms-5 versionpequena mt-5 hide-on-1493px"
+                style="font-size: 70px"
+              >
+                Un tercio de todos los alimentos que se producen en el mundo se
+                desperdician
+              </h1>
+              <p class="text-white left fs-2 ms-5 versionpequena mt-4 hide-on-1493px">
+                Esto representa 1300 millones de toneladas de alimentos, de los
+                cuales el 14% corresponde al sector de los servicios
+                alimentarios (cáterin, hoteles y restaurantes)
+              </p>
+            </div>
+          </div>
+        </div>
+      </div>
       <span>
-        <div class="container-fluid px-0">
+        <div class="container-fluid px-0 hide-on-1492px">
           <div class="row g-0">
             <div class="col-md-12-lg-12">
               <img
@@ -245,7 +279,7 @@
               "
               href="./archivos/appShareBeforeWaste.zip"
               download
-              ><p class="mt-3 fs3 me-4 ms-4"> DESCARGA LA APLICACIÓN </p>
+              ><p class="mt-3 fs3 me-4 ms-4">DESCARGA LA APLICACIÓN</p>
             </a>
           </div>
         </div>
