mejora estilos formularios + titulo de cada label

--- a/negocio.html
+++ b/negocio.html
@@ -81,40 +81,41 @@
       <div class="container-fluid">
         <div class="row">
           <div class="col-md-6">
-            <div class="form-floating mb-3 ms-4" style="color: white">
+            <div class="form-floating mb-4 ms-4 text-dark">
               <input
                 type="text"
                 class="form-control border border-success rounded-pill"
                 id="nombredelnegocio"
-                placeholder="Nombre del Negocio"
-              />
+                placeholder="Nombre del Negocio">
               <label for="Nameinput">Nombre del Negocio</label>
             </div>
           </div>
         </div>
       </div>
+      <div class="container-fluid">
+        <div class="row">
       <div class="col-md-6">
-        <div class="form-floating mb-3 ms-4" style="color: white">
+        <div class="form-floating mb-4 ms-4  text-dark">
           <input
             type="text"
             class="form-control border border-success rounded-pill"
             id="numerodetelefono"
-            placeholder="Numero de teléfono"
-          />
+            placeholder="Numero de teléfono">
           <label for="Nameinput">Numero de teléfono</label>
         </div>
+      </div>
+      </div>
       </div>
       <div class="container-fluid">
         <div class="row">
           <div class="col-md-6">
-            <div class="form-floating mb-3 ms-4" style="color: white">
+            <div class="form-floating mb-4 ms-4 text-dark">
               <input
                 type="email"
                 class="form-control border border-success rounded-pill"
                 style="border-color: #1a4301"
                 id="correoelectronico"
-                placeholder="Dirección de correo electrónico"
-              />
+                placeholder="Dirección de correo electrónico">
               <label for="floatingInput">Dirección de correo electrónico</label>
             </div>
           </div>
@@ -123,15 +124,14 @@
       <div class="container-fluid">
         <div class="row">
           <div class="col-md-6">
-            <div class="form-floating mb-3 ms-4" style="color: white">
+            <div class="form-floating mb-4 ms-4  text-dark">
               <input
                 type="email"
                 class="form-control border border-success rounded-pill"
                 style="border-color: #1a4301;"
                 ;;
                 id="ciudad"
-                placeholder="Ciudad"
-              />
+                placeholder="Ciudad">
               <label for="floatingInput">Ciudad</label>
             </div>
             <button
