--- a/iniciativas.html
+++ b/iniciativas.html
@@ -76,7 +76,7 @@
             <!-- PASO1 -->
             <div class="row" id="paso1">
               <div
-                class="offset-md-7 bg-white rounded mt-3 me-5"
+                class="offset-md-7 bg-white rounded mt-3 me-5 border border-dark px0"
                 style="width: 38.8125rem; height: 34.4375rem"
               >
                 <form>
@@ -96,7 +96,7 @@
                         checked
                       />
                       <label
-                        class="btn btn btn-outline-success mb-4 ms-5 text-dark fs-5"
+                        class="btn btn btn-outline-success mb-4 ms-5 text-dark fs-5 border border-dark"
                         for="btnradio1"
                         >$1000</label
                       >
@@ -110,7 +110,7 @@
                         autocomplete="off"
                       />
                       <label
-                        class="btn btn btn-outline-success mb-4 me-4 ms-4 fs-5 text-dark"
+                        class="btn btn btn-outline-success mb-4 me-4 ms-4 fs-5 text-dark border border-dark"
                         for="btnradio2"
                         >$1500</label
                       >
@@ -124,7 +124,7 @@
                         autocomplete="off"
                       />
                       <label
-                        class="btn btn btn-outline-success ms-0 fs-5 text-dark ms-2"
+                        class="btn btn btn-outline-success ms-0 fs-5 text-dark ms-2 border border-dark"
                         for="btnradio3"
                         >$2000</label
                       >
@@ -140,7 +140,7 @@
                         autocomplete="off"
                       />
                       <label
-                        class="btn btn-outline-success fs-5 mb-5 mt-4 text-dark ms-2"
+                        class="btn btn-outline-success fs-5 mb-5 mt-4 text-dark ms-2 border border-dark"
                         for="btnradio4"
                         >Otro monto, mayor a $500</label
                       >
@@ -155,7 +155,7 @@
                       
                         type="text"
                         style="display:none;"
-                        class="rounded form-control border border-dark me-5 text-dark fs-5"
+                        class="rounded form-control border border-dark me-5 text-dark fs-5 border border-dark"
                         id="otroMonto"
                         placeholder="Ingrese monto"
                       />
@@ -171,7 +171,7 @@
                       >
                       <select
                         id="provincia"
-                        class="form-select"
+                        class="form-select border border-dark"
                         aria-label="Seleccionar una provincia"
                       >
                         <option value="noSeleccionado" selected>Seleccione una provincia</option>
@@ -181,12 +181,12 @@
                       </select>
                     </div>
                     <div class="col">
-                      <label for="localidad" class="form-label fs-5"
+                      <label for="localidad" class="form-label fs-5 "
                         >Localidad</label
                       >
                       <select
                         id="localidad"
-                        class="form-select"
+                        class="form-select border border-dark"
                         aria-label="Seleccionar una localidad"
                       >
                         
@@ -200,7 +200,7 @@
                       >
                       <select
                         id="comedor"
-                        class="form-select"
+                        class="form-select  border border-dark"
                         aria-label="Seleccionar un comedor"
                       >
                       </select>
@@ -209,7 +209,7 @@
                       <button
                         onclick="siguientePaso()"
                         type="button"
-                        class="btn btn-primary mb-5 mt-5 fs-5 text-dark"
+                        class="btn btn-primary mb-5 mt-5 fs-5 text-dark border border-dark fw-bold"
                         style="background-color: white; border-color: black"
                       >
                         CONTINUAR
@@ -322,7 +322,7 @@
                       <button
                         onclick="pasoAnterior()"
                         type="button"
-                        class="fs-5 btn btn-primary mb-5 mt-4 text-dark"
+                        class="fs-5 btn btn-primary mb-5 mt-4 text-dark fw-bold"
                         style="background-color: white; border-color: black"
                       >
                         ANTERIOR
@@ -332,7 +332,7 @@
                       <button
                         onclick="siguientePaso()"
                         type="button"
-                        class="btn btn-primary mb-5 mt-4 text-dark fs-5"
+                        class="btn btn-primary mb-5 mt-4 text-dark fs-5 fw-bold"
                         style="background-color: white; border-color: black"
                       >
                         SIGUIENTE
@@ -428,7 +428,7 @@
                       <button
                         onclick="pasoAnterior()"
                         type="button"
-                        class="btn btn-primary mb-5 mt-5 fs-5 text-dark"
+                        class="btn btn-primary mb-5 mt-5 fs-5 text-dark fw-bold"
                         style="background-color: white; border-color: black"
                       >
                         ANTERIOR
@@ -438,7 +438,7 @@
                       <button
                         onclick="donacionExitosa()"
                         type="button"
-                        class="btn btn-primary mb-5 mt-5 fs-5 text-dark"
+                        class="btn btn-primary mb-5 mt-5 fs-5 text-dark fw-bold"
                         style="background-color: white; border-color: black"
                       >
                         FINALIZAR
