--- a/iniciativas.html
+++ b/iniciativas.html
@@ -96,7 +96,7 @@
                         checked
                       />
                       <label
-                        class="btn btn btn-outline-success mb-4 ms-5 text-dark fs-5 border border-dark"
+                        class="btn btn btn-outline-success mb-4 ms-5 text-dark fw-bold fs-5 border border-dark"
                         for="btnradio1"
                         >$1000</label
                       >
@@ -110,7 +110,7 @@
                         autocomplete="off"
                       />
                       <label
-                        class="btn btn btn-outline-success mb-4 me-4 ms-4 fs-5 text-dark border border-dark"
+                        class="btn btn btn-outline-success mb-4 me-4 ms-4 fw-bold fs-5 text-dark border border-dark"
                         for="btnradio2"
                         >$1500</label
                       >
@@ -124,7 +124,7 @@
                         autocomplete="off"
                       />
                       <label
-                        class="btn btn btn-outline-success ms-0 fs-5 text-dark ms-2 border border-dark"
+                        class="btn btn btn-outline-success ms-0 fs-5 text-dark ms-2 fw-bold border border-dark"
                         for="btnradio3"
                         >$2000</label
                       >
@@ -153,7 +153,7 @@
                       ></label>
                       <input
                       
-                        type="text"
+                        type="number"
                         style="display:none;"
                         class="rounded form-control border border-dark me-5 text-dark fs-5 border border-dark"
                         id="otroMonto"
@@ -181,7 +181,10 @@
                       </select>
                     </div>
                     <div class="col">
-                      <label for="localidad" class="form-label fs-5 "
+                      <label 
+                      for="localidad"
+                      style="background-color: white; border-color: black"
+                      class="form-label fs-5 "
                         >Localidad</label
                       >
                       <select
@@ -195,7 +198,10 @@
                   </div>
                   <div class="row mt-2">
                     <div class="col">
-                      <label for="comedor" class="form-label fs-5 mt-3"
+                      <label 
+                      for="comedor"
+                      style="background-color: white; border-color: black"
+                      class="form-label fs-5 mt-3"
                         >Comedor</label
                       >
                       <select
