imagenes inicio resposnive

--- a/index.html
+++ b/index.html
@@ -159,22 +159,27 @@
           </div>
         </div>
       </div>
-      <div class="container-fluid text-start px-0">
-        <div class="row">
-          <div class="col-md-12" style="position: relative">
-            <img class="img-fluid mb-5" src="./imagenes/untercio.jpg" />
+      <div class="container-fluid text-start px-0 hide-on-700px">
+        <div class="row hide-on-700px">
+          <div class="col-md-12 hide-on-700px" style="position: relative">
+            <img
+              class="img-fluid mb-5 hide-on-700px"
+              src="./imagenes/untercio.jpg"
+            />
             <div
-              class="col-md-6"
+              class="col-md-6 hide-on-700px"
               style="position: absolute; top: 10px; text-align: left"
             >
               <h1
-                class="text-white ms-5 versionpequena mt-5"
+                class="text-white ms-5 versionpequena mt-5 hide-on-700px"
                 style="font-size: 70px"
               >
                 Un tercio de todos los alimentos que se producen en el mundo se
                 desperdician
               </h1>
-              <p class="text-white left fs-2 ms-5 versionpequena mt-4">
+              <p
+                class="text-white left fs-2 ms-5 versionpequena mt-4 hide-on-700px"
+              >
                 Esto representa 1300 millones de toneladas de alimentos, de los
                 cuales el 14% corresponde al sector de los servicios
                 alimentarios (cáterin, hoteles y restaurantes)
@@ -183,27 +188,13 @@
           </div>
         </div>
       </div>
-      <div class="container-fluid text-start px-0 hide-on-1493px">
+      <div class="container-fluid text-start px-0 hide-on-701px">
         <div class="row">
-          <div class="col-md-12 hide-on-1493px" style="position: relative">
-            <img class="img-fluid mb-5 hide-on-700px" src="./imagenes/untercio.png" />
-            <div
-              class="col-md-6 hide-on-1493px"
-              style="position: absolute; top: 10px; text-align: left"
-            >
-              <h1
-                class="text-white ms-5 versionpequena mt-5 hide-on-1493px"
-                style="font-size: 70px"
-              >
-                Un tercio de todos los alimentos que se producen en el mundo se
-                desperdician
-              </h1>
-              <p class="text-white left fs-2 ms-5 versionpequena mt-4 hide-on-1493px">
-                Esto representa 1300 millones de toneladas de alimentos, de los
-                cuales el 14% corresponde al sector de los servicios
-                alimentarios (cáterin, hoteles y restaurantes)
-              </p>
-            </div>
+          <div class="col-md-12 " style="position: relative">
+            <img
+              class="img-fluid mb-5 "
+              src="./imagenes/untercio.png"
+            />
           </div>
         </div>
       </div>
