--- a/index.html
+++ b/index.html
@@ -44,21 +44,21 @@
         >
           <ul class="navbar-nav">
             <li class="nav-item px-4">
-              <a class="nav-link fw-bold" href="index.html">INICIO</a>
+              <a class="nav-link fw-bold fs-4 text-dark" href="index.html">INICIO</a>
             </li>
             <li class="nav-item px-4">
-              <a class="nav-link fw-bold" href="iniciativas.html"
+              <a class="nav-link fw-bold fs-4 text-dark" href="iniciativas.html"
                 >INICIATIVAS</a
               >
             </li>
             <li class="nav-item px-4">
-              <a class="nav-link fw-bold" href="negocio.html">NEGOCIO</a>
+              <a class="nav-link fw-bold fs-4 text-dark" href="negocio.html">NEGOCIO</a>
             </li>
             <li class="nav-item px-4">
-              <a class="nav-link fw-bold" href="usuario.html">USUARIO</a>
+              <a class="nav-link fw-bold fs-4 text-dark" href="usuario.html">USUARIO</a>
             </li>
             <li class="nav-item px-4">
-              <a class="nav-link fw-bold" href="tuopinion.html">TU OPINIÓN</a>
+              <a class="nav-link fw-bold fs-4 text-dark" href="tuopinion.html">TU OPINIÓN</a>
             </li>
           </ul>
         </div>
