agregue imagen responsive negocio

--- a/negocio.html
+++ b/negocio.html
@@ -147,7 +147,7 @@
           </div>
         </div>
       </div>
-      <div class="container-fluid text-start px-0">
+      <div class="container-fluid text-start px-0 hide-on-1441px">
         <div class="row">
           <div class="col-md-12" style="position: relative">
             <img class="img-fluid" src="./imagenes/fondonegocio.jpg" />
@@ -167,6 +167,13 @@
                 </p>
               </div>
             </div>
+          </div>
+        </div>
+      </div>
+      <div class="container-fluid text-start px-0 hide-on-1442px">
+        <div class="row">
+          <div class="col-md-12" style="position: relative">
+            <img class="img-fluid" src="./imagenes/fondonegocio.png" />
           </div>
         </div>
       </div>
