cambio imagen iniciativas +texto

--- a/negocio.html
+++ b/negocio.html
@@ -172,7 +172,7 @@
       </div>
       <div class="container-fluid text-start px-0 hide-on-1442px">
         <div class="row">
-          <div class="col-md-12" style="position: relative">
+          <div class="col-md-12">
             <img class="img-fluid" src="./imagenes/fondonegocio.png" />
           </div>
         </div>
