--- a/iniciativas.html
+++ b/iniciativas.html
@@ -68,7 +68,7 @@
     <main>
       <div class="container-fluid text-start px-0">
         <div class="container-fluid" style="position: relative; padding: 0">
-          <img class="img-fluid w-100" src="imagenes/donaciones.jpeg" />
+          <img class="img-fluid w-100" src="imagenes/donaciones.png" />
           <div
             class="container-fluid"
             style="position: absolute; top: 10px; right: 25px"
