--- a/negocio.html
+++ b/negocio.html
@@ -84,7 +84,7 @@
             <div class="form-floating mb-4 ms-4 text-dark">
               <input
                 type="text"
-                class="form-control border border-success rounded-pill"
+                class="form-control border-2 border-success rounded-pill"
                 id="nombredelnegocio"
                 placeholder="Nombre del Negocio">
               <label for="Nameinput">Nombre del Negocio</label>
@@ -98,7 +98,7 @@
         <div class="form-floating mb-4 ms-4  text-dark">
           <input
             type="text"
-            class="form-control border border-success rounded-pill"
+            class="form-control border-2 border-success rounded-pill"
             id="numerodetelefono"
             placeholder="Numero de teléfono">
           <label for="Nameinput">Numero de teléfono</label>
@@ -112,7 +112,7 @@
             <div class="form-floating mb-4 ms-4 text-dark">
               <input
                 type="email"
-                class="form-control border border-success rounded-pill"
+                class="form-control border-2 border-success rounded-pill"
                 style="border-color: #1a4301"
                 id="correoelectronico"
                 placeholder="Dirección de correo electrónico">
@@ -127,7 +127,7 @@
             <div class="form-floating mb-4 ms-4  text-dark">
               <input
                 type="email"
-                class="form-control border border-success rounded-pill"
+                class="form-control border-2 border-success rounded-pill"
                 style="border-color: #1a4301;"
                 ;;
                 id="ciudad"
@@ -142,7 +142,7 @@
               ;
               onclick="negocio()"
             >
-              <p class="fs-4 pe-3 ps-3">REGISTRATE AHORA</p>
+              <p class="fs-4 pe-3 ps-3 text-center mt-2">REGISTRATE AHORA</p>
             </button>
           </div>
         </div>
@@ -202,7 +202,7 @@
             href="./instructivo/InstructivoShareBeforeWaste.png" alt="_blank"
             download
             >
-            <p class="mt-3 fs3 me-2 ms-2">
+            <p class="mt-3 fs3 me-3 ms-3">
               INSTRUCTIVO
               <svg
                 xmlns="http://www.w3.org/2000/svg"
