--- a/tuopinion.html
+++ b/tuopinion.html
@@ -88,7 +88,7 @@
           
           <input
             type="text"
-            class="form-control text-dark bold border text-dark border-success rounded-pill"
+            class="form-control text-dark bold border-2 text-dark border-success rounded-pill"
             id="nombre"
             placeholder="Nombre">
             <label for="floatingInput">Nombre</label>
@@ -98,7 +98,7 @@
         <div class="form-floating mb-3  text-dark">
           <input
             type="text"
-            class="form-control text-dark bold border border-success rounded-pill"
+            class="form-control text-dark bold border-2 border-success rounded-pill"
             id="apellido"
             placeholder="Apellido">
           
@@ -108,7 +108,7 @@
           <div class="form-floating mb-3 text-dark">
             <input
               type="email"
-              class="form-control text-dark bold border border-success rounded-pill"
+              class="form-control text-dark bold border-2 border-success rounded-pill"
               id="email"
               placeholder="Correo electrónico"
               name="Correo electrónico">
@@ -118,7 +118,7 @@
         </div>
         <div class="form-floating mb-3">
           <textarea
-            class="form-control bold border border-success fw-bold text-dark"
+            class="form-control bold border-2 border-success rounded-3 fw-bold text-dark"
             style="height: 250px"
             ;
             id="comentarios"
@@ -128,7 +128,7 @@
         </div>
         <button
           type="button"
-          class="col-md-6 text-center btn text-dark bold border border-success rounded-pill fs-3 fw-bold ms-2 mt-3 mb-5"
+          class="col-md-6 text-center btn text-dark bold border-2 border-success rounded-pill rounded-3 fs-3 fw-bold ms-2 mt-3 mb-5"
           style="background-color: white"
           onclick="enviarOpinion()"
         >
@@ -186,8 +186,8 @@
                   </div>
                   <button
                     type="button"
-                    class="rounded-pill fs-3 fw-bold ms-4 mt-3 mb-5 btn-white btn-lg"
-                    onclick="newsletter () "
+                    class="form-control border border-success rounded-pill fs-3 fw-bold ms-1 mt-3 mb-5 btn-white btn-lg"
+                    onclick="newsletter ()"
                   >
                     ¡SUSCRIBIRME!
                   </button>
