formulario news-letter responsive

--- a/tuopinion.html
+++ b/tuopinion.html
@@ -137,7 +137,7 @@
       </div>
 
       <div
-        class="container-fluid text-start px-0 mt-3"
+        class="container-fluid text-start px-0 mt-3 hide-on-700px"
         style="background-color: #1a4301"
         ;
       >
@@ -197,6 +197,75 @@
           </div>
         </div>
       </div>
+
+      <!---Versión mobile newsletter-->
+      <div
+      class="container-fluid text-start px-0 mt-3 hide-on-701px"
+      style="background-color: #1a4301"
+      ;
+    >
+      <div class="row">
+        <div class="col-md-12">
+          <div class="row">
+            <h1 class="text-white bold ps-3 ms-4 mt-3 mt-5 mb-5">
+              Suscribite
+            </h1>
+            <div class="col-md-12 fs-4">
+              <p class="text-white bold ps-3 mb-5">
+                ¡Sharing es nuestro boletín mensual de actualización, repleto
+                de consejos increíbles para combatir la comida,
+                actualizaciones sobre nuestra misión y sorteos para ganar!
+              </p>
+            </div>
+            <div class="col-md-6 fs-4">
+              <p class="text-white bold ps-3">
+                ¡Unite a la comunidad y recibí “Sharing” directamente en tu
+                bandeja de entrada!
+              </p>
+              <p class="text-white bold ps-3">
+                ¡No volverás a perderte ningún truco sobre el desperdicio de
+                alimentos ni la oportunidad de ganar!
+              </p>
+            </div>
+            <div class="row">
+            <div class="col-md-4 ">
+              <div class="form-floating mb-3 px-0 text-dark">
+                <input
+                  type="text"
+                  class="form-control border border-success rounded-pill px-0"
+                  id="nombreYApellido"
+                  placeholder="Nombre y apellido ">
+                <label for="floatingInput">Nombre y apellido</label>
+              </div>
+              <div>
+                <div class="form-floating mb-3 px-0 text-dark">
+                  <input
+                    type="email"
+                    class="form-control border border-success rounded-pill"
+                    style="color: #1a4301"
+                    ;
+                    id="correoelectronico"
+                    placeholder="Correo electrónico">
+                  <label for="floatingInput">Correo electrónico</label>
+                </div>
+                <button
+                  type="button"
+                  class="form-control border border-success px-0 rounded-pill fs-3 fw-bold mt-3 mb-5 btn-white btn-lg"
+                  onclick="newsletter ()"
+                >
+                  ¡SUSCRIBIRME!
+                </button>
+              </div>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
+
+
+
+      <!--Fin versión mobile newsletter-->
     </main>
     <footer class="container-fluid mt-5 mb-1">
       <div class="row">
