--- a/index.html
+++ b/index.html
@@ -44,7 +44,9 @@
         >
           <ul class="navbar-nav">
             <li class="nav-item px-4">
-              <a class="nav-link fw-bold fs-4 text-dark" href="index.html">INICIO</a>
+              <a class="nav-link fw-bold fs-4 text-dark" href="index.html"
+                >INICIO</a
+              >
             </li>
             <li class="nav-item px-4">
               <a class="nav-link fw-bold fs-4 text-dark" href="iniciativas.html"
@@ -52,13 +54,19 @@
               >
             </li>
             <li class="nav-item px-4">
-              <a class="nav-link fw-bold fs-4 text-dark" href="negocio.html">NEGOCIO</a>
+              <a class="nav-link fw-bold fs-4 text-dark" href="negocio.html"
+                >NEGOCIO</a
+              >
             </li>
             <li class="nav-item px-4">
-              <a class="nav-link fw-bold fs-4 text-dark" href="usuario.html">USUARIO</a>
+              <a class="nav-link fw-bold fs-4 text-dark" href="usuario.html"
+                >USUARIO</a
+              >
             </li>
             <li class="nav-item px-4">
-              <a class="nav-link fw-bold fs-4 text-dark" href="tuopinion.html">TU OPINIÓN</a>
+              <a class="nav-link fw-bold fs-4 text-dark" href="tuopinion.html"
+                >TU OPINIÓN</a
+              >
             </li>
           </ul>
         </div>
@@ -92,15 +100,29 @@
       <div class="container-fluid text-start px-0 hide-on-701px">
         <div class="row">
           <div class="col-md-12 hide-on-701px" style="position: relative">
-            <img
-              class="img-fluid hide-on-701px"
-              src="./imagenes/fondoinicio.png"
-            />
-            <div
-              class="container-fluid text-left fondo px-0 hide-on-701px"
-            ></div>
+            <img class="img-fluid" src="./imagenes/fondoinicio.jpg" />
+            <div class="col-md-8" style="position: absolute; top: 10px">
+              <h1 class="text-white ms-1 mt-1">
+                Salvemos juntos
+                <br />
+                la buena comida
+              </h1>
+              <div class="row">
+                <div class="col-md-8">
+                  <p class="text-white fs-5 text-white ms-1 mt-1">
+                    El desperdicio de alimentos es un
+                    <br />
+                    gran problema y nosotros <br />podemos ser una solución.
+                    <br />Share Before Waste es la <br />aplicación que te
+                    permite <br />rescatar los alimentos.
+                  </p>
+                </div>
+              </div>
+            </div>
           </div>
         </div>
+      </div>
+      <div class="container-fluid">
         <div class="row">
           <div class="col-md-6">
             <h1 class="pt-4 mt-4 ms-4" style="color: #1a4301">
@@ -159,9 +181,35 @@
           </div>
         </div>
       </div>
-      <div class="container-fluid text-start px-0 hide-on-700px">
-        <div class="row hide-on-700px">
-          <div class="col-md-12 hide-on-700px" style="position: relative">
+      <div class="container-fluid text-start px-0 hide-on-701px">
+        <div class="row">
+          <div class="col-md-12" style="position: relative">
+            <img
+              class="img-fluid mb-5 hide-on-701"
+              src="./imagenes/untercio.jpg"
+            />
+            <div
+              class="col-md-6"
+              style="position: absolute; top: 10px; text-align: left"
+            >
+              <h1 class="text-white fs- mb-3">
+                Un tercio de todos los alimentos que se producen en el mundo se
+                desperdician
+              </h1>
+              <p class="text-white fs-5">
+                Esto representa 1300 millones de <br />toneladas de alimentos,
+                de los <br />
+                cuales el 14% corresponde al sector <br />de los servicios
+                <br />
+                alimentarios (cáterin, hoteles <br />y restaurantes)
+              </p>
+            </div>
+          </div>
+        </div>
+      </div>
+      <div class="container-fluid text-start px-0 hide-on-700">
+        <div class="row">
+          <div class="col-md-12" style="position: relative">
             <img
               class="img-fluid mb-5 hide-on-700px"
               src="./imagenes/untercio.jpg"
@@ -171,15 +219,13 @@
               style="position: absolute; top: 10px; text-align: left"
             >
               <h1
-                class="text-white ms-5 versionpequena mt-5 hide-on-700px"
+                class="text-white ms-5 versionpequena mt-5"
                 style="font-size: 70px"
               >
                 Un tercio de todos los alimentos que se producen en el mundo se
                 desperdician
               </h1>
-              <p
-                class="text-white left fs-2 ms-5 versionpequena mt-4 hide-on-700px"
-              >
+              <p class="text-white left fs-2 ms-5 versionpequena mt-4">
                 Esto representa 1300 millones de toneladas de alimentos, de los
                 cuales el 14% corresponde al sector de los servicios
                 alimentarios (cáterin, hoteles y restaurantes)
@@ -188,18 +234,8 @@
           </div>
         </div>
       </div>
-      <div class="container-fluid text-start px-0 hide-on-701px">
-        <div class="row">
-          <div class="col-md-12 " style="position: relative">
-            <img
-              class="img-fluid mb-5 "
-              src="./imagenes/untercio.png"
-            />
-          </div>
-        </div>
-      </div>
       <span>
-        <div class="container-fluid px-0 hide-on-1492px">
+        <div class="container-fluid px-0">
           <div class="row g-0">
             <div class="col-md-12-lg-12">
               <img
