cambios responsive imagenes

--- a/negocio.html
+++ b/negocio.html
@@ -172,21 +172,22 @@
       </div>
       <div class="container-fluid text-start px-0 hide-on-1442px">
         <div class="row">
-          <div class="col-md-12">
-            <img class="img-fluid" src="./imagenes/fondonegocio.png" />
+          <div class="col-md-12" style="position: relative">
+            <img class="img-fluid" src="./imagenes/fondonegocio.jpg" />
+            <div>
+              <div class="col-md-6" style="position: absolute; top: 10px">
+                <h1 class="text-white">
+                  Beneficios de poner tu negocio en nuestra app
+                </h1>
+                <p class="text-white fs-5">
+                  La aplicación permite reducir el desperdicio de 
+                 alimentos y recuperar dinero extra.
+                  </p>
+              </div>
+            </div>
           </div>
         </div>
       </div>
-      <div class="container-fluid text-start px-0">
-        <div class="row">
-          <div class="col-md-6 px-5 mt-5 pt-3">
-            <h2 style="font-size: 45px" class="mb-4">Cómo funciona</h2>
-            <p class="text-black fs-3 fw-bold mt-5">
-              Complete el formulario de consulta para registrar su negocio en
-              Share before waste y agregue sus excedentes de comida en la
-              aplicación.
-            </p>
-          </div>
           <div class="row">
           <div class="col-md-6 px-5 pt-3 ">
             <a
