--- a/tuopinion.html
+++ b/tuopinion.html
@@ -138,7 +138,7 @@
 
       <div
         class="container-fluid text-start px-0 mt-3 hide-on-700px"
-        style="background-color: #1a4301"
+        style="background-color: #1a4301;width:100%;"
         ;
       >
         <div class="row">
