estilo responsive de la imagen inicial

--- a/iniciativas.html
+++ b/iniciativas.html
@@ -249,7 +249,7 @@
                       <input
                         type="text"
                         class="rounded form-control border border-dark me-5 text-dark fs-5"
-                        id="exampleFormControlInput1"
+                        id="nombre"
                         placeholder="Nombre"
                       />
                     </div>
@@ -262,8 +262,8 @@
                       <input
                         type="text"
                         class="rounded form-control border border-dark me-5 text-dark fs-5"
-                        id="exampleFormControlInput1"
-                        placeholder="Apellido"
+                        id="apellido"
+                        placeholder="apellido"
                       />
                     </div>
                   </div>
@@ -275,22 +275,22 @@
                         class="form-label"
                       ></label>
                       <input
-                        type="birth"
+                        type="date"
                         class="rounded form-control border border-dark me-5 text-dark fs-5"
-                        id="exampleFormControlInput1"
+                        id="fechaDeNacimiento"
                         placeholder="Fecha de nacimiento"
                       />
                     </div>
                     <div class="col">
                       <label
-                        for="exampleFormControlInput1"
+                        for="number"
                         style="background-color: white"
                         class="form-label"
                       ></label>
                       <input
                         type="text"
                         class="rounded form-control border border-dark me-5 text-dark fs-5"
-                        id="exampleFormControlInput1"
+                        id="DNI"
                         placeholder="DNI"
                       />
                     </div>
@@ -303,9 +303,9 @@
                         class="form-label"
                       ></label>
                       <input
-                        type="birth"
+                        type="email"
                         class="rounded form-control border border-dark me-5 text-dark fs-5 mb-5"
-                        id="exampleFormControlInput1"
+                        id="correoElectronico"
                         placeholder=" Correo electrónico"
                       />
                     </div>
@@ -316,7 +316,7 @@
                         class="form-label"
                       ></label>
                       <input
-                        type="text"
+                        type="number"
                         class="rounded form-control border border-dark me-5 text-dark fs-5 mb-5"
                         id="exampleFormControlInput1"
                         placeholder="Teléfono"
@@ -369,7 +369,7 @@
                         class="form-label"
                       ></label>
                       <input
-                        type="text"
+                        type="number"
                         class="rounded form-control border border-dark me-5 text-dark fs-5"
                         id="exampleFormControlInput1"
                         placeholder="Número de Tarjeta"
@@ -395,7 +395,7 @@
                         class="form-label"
                       ></label>
                       <input
-                        type="birth"
+                        type="text"
                         class="rounded form-control border border-dark me-5 text-dark fs-5"
                         id="exampleFormControlInput1"
                         placeholder="Apellidos del Titular"
@@ -407,7 +407,7 @@
                         class="form-label"
                       ></label>
                       <input
-                        type="text"
+                        type="numbers"
                         class="rounded form-control border border-dark me-5 text-dark fs-5"
                         id="exampleFormControlInput1"
                         placeholder="DNI"
