--- a/index.html
+++ b/index.html
@@ -73,7 +73,7 @@
       </div>
     </nav>
     <main>
-      <div class="container-fluid text-start px-0 hide-on-700px">
+      <div class="container-fluid text-start px-0 fondo-inicio-desktop">
         <div class="row">
           <div class="col-md-12" style="position: relative">
             <img class="img-fluid" src="./imagenes/fondoinicio.jpg" />
@@ -97,9 +97,9 @@
           </div>
         </div>
       </div>
-      <div class="container-fluid text-start px-0 hide-on-701px">
+      <div class="container-fluid text-start px-0 fondo-inicio-mobile">
         <div class="row">
-          <div class="col-md-12 hide-on-701px" style="position: relative">
+          <div class="col-md-12 " style="position: relative">
             <img class="img-fluid" src="./imagenes/fondoinicio.jpg" />
             <div class="col-md-8" style="position: absolute; top: 10px">
               <h1 class="text-white ms-1 mt-1">
