--- a/index.html
+++ b/index.html
@@ -99,7 +99,7 @@
       </div>
       <div class="container-fluid text-start px-0 fondo-inicio-mobile">
         <div class="row">
-          <div class="col-md-12 " style="position: relative">
+          <div class="col-md-12" style="position: relative">
             <img class="img-fluid" src="./imagenes/fondoinicio.jpg" />
             <div class="col-md-8" style="position: absolute; top: 10px">
               <h1 class="text-white ms-1 mt-1">
@@ -181,7 +181,7 @@
           </div>
         </div>
       </div>
-      <div class="container-fluid text-start px-0 hide-on-701px">
+      <div class="container-fluid text-start px-0 fondo-inicio-desktop">
         <div class="row">
           <div class="col-md-12" style="position: relative">
             <img
@@ -207,30 +207,13 @@
           </div>
         </div>
       </div>
-      <div class="container-fluid text-start px-0 hide-on-700">
+      <div class="container-fluid text-start px-0 fondo-inicio-mobile">
         <div class="row">
           <div class="col-md-12" style="position: relative">
             <img
               class="img-fluid mb-5 hide-on-700px"
-              src="./imagenes/untercio.jpg"
+              src="./imagenes/untercio.png"
             />
-            <div
-              class="col-md-6 hide-on-700px"
-              style="position: absolute; top: 10px; text-align: left"
-            >
-              <h1
-                class="text-white ms-5 versionpequena mt-5"
-                style="font-size: 70px"
-              >
-                Un tercio de todos los alimentos que se producen en el mundo se
-                desperdician
-              </h1>
-              <p class="text-white left fs-2 ms-5 versionpequena mt-4">
-                Esto representa 1300 millones de toneladas de alimentos, de los
-                cuales el 14% corresponde al sector de los servicios
-                alimentarios (cáterin, hoteles y restaurantes)
-              </p>
-            </div>
           </div>
         </div>
       </div>
@@ -253,14 +236,13 @@
             <img
               class="img-fluid mt-4 ms-4"
               src="imagenes/usandolaapp.jpg"
-              
               alt="cliente que sostiene productos del delivery"
             />
           </div>
           <div class="col-md-6 pt-5">
             <h1
               class="ms-4 mt-4 mb-5"
-              style="color: #1a4301; font-size: 3.75rem"
+              style="color: #1a4301;"
             >
               Involúcrate
             </h1>
