responsive imagne sección mobile

--- a/negocio.html
+++ b/negocio.html
@@ -147,7 +147,7 @@
           </div>
         </div>
       </div>
-      <div class="container-fluid text-start px-0 hide-on-1441px">
+      <div class="container-fluid text-start px-0 fondo-inicio-desktop">
         <div class="row">
           <div class="col-md-12" style="position: relative">
             <img class="img-fluid" src="./imagenes/fondonegocio.jpg" />
@@ -170,7 +170,7 @@
           </div>
         </div>
       </div>
-      <div class="container-fluid text-start px-0 hide-on-1442px">
+      <div class="container-fluid text-start px-0 fondo-inicio-mobile">
         <div class="row">
           <div class="col-md-12" style="position: relative">
             <img class="img-fluid" src="./imagenes/fondonegocio.jpg" />
@@ -180,7 +180,7 @@
                   Beneficios de poner tu negocio en nuestra app
                 </h1>
                 <p class="text-white fs-5">
-                  La aplicación permite reducir el desperdicio de 
+                  Permite reducir el desperdicio de 
                  alimentos y recuperar dinero extra.
                   </p>
               </div>
