fondo imagen newsletter responsive

--- a/tuopinion.html
+++ b/tuopinion.html
@@ -137,7 +137,7 @@
       </div>
 
       <div
-        class="container-fluid text-start px-0 mt-3 hide-on-700px"
+        class="container-fluid text-start px-0 mt-3 fondo-inicio-desktop"
         style="background-color: #1a4301;width:100%;"
         ;
       >
@@ -200,7 +200,7 @@
 
       <!---Versión mobile newsletter-->
       <div
-      class="container-fluid text-start px-0 mt-3 hide-on-701px"
+      class="container-fluid text-start px-0 mt-3 fondo-inicio-mobile"
       style="background-color: #1a4301"
       ;
     >
